# brilltech_mega

./: .env.example  .gitignore  .replit  DEPLOY_PYTHONANYWHERE.md  README.md  app.py  build.sh  deploy_on_droplet_ssl.sh  manage.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  setup_postgres.sql  tailwind.config.js  testpp
attached_assets/: Pasted--1-Models-PastPaper-exam-board-choices-Cambridge-Edexcel-GED-CAPS-IEB--1761097393017_1761097393022.txt  Pasted--notice-A-new-release-of-pip-is-available-25-0-1-25-3-n_1767823094953.txt  Pasted--venv-C-Users-Stanley-Desktop-brilltech-app-python-mana_1767823159234.txt  Pasted-FieldError-at-content-Cannot-resolve-keyword-created-at-into-field-Choices-are-chapter-exam--1761170792495_1761170792505.txt  Pasted-You-are-an-AI-full-stack-developer-Your-task-is-to-create-a-freemium-teacher-edtech-app-MVP-Th-1758490860694_1758490860703.txt  Pasted-the-file-s-are-not-downloadable-and-not-viewable-in-a-modal-the-admin-section-is-not-working-when-1758495442043_1758495442046.txt
core/: __init__.py  adapters.py  admin.py  admin_signup_urls.py  admin_signup_views.py  api_urls.py  api_views.py  context_processors.py  models.py  openai_service.py  payfast_service.py  serializers.py  student_urls.py  student_views.py  subscription_utils.py  teacher_urls.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_generatedassignment_instructions_and_more.py  0003_uploadeddocument_ai_content.py  0004_userprofile_email_verified_and_more.py  0009_passwordresettoken.py  (+29 more)
django_project/: settings.py  urls.py
(+159 files in other folders)
